--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Zirui Song"
   avatar           : "images/profile.jpg"
-  bio              : "University of Technology Sydney"
+  bio              : "PhD Students in Mohamed bin Zayed University of Artificial Intelligence"
   location         : "Abu Dhabi, UAE"
   employer         : "MBZUAI"
   pubmed           : 
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "ziruibest"
+  github           : "ziruisongbest"
   google_plus      :
   keybase          :
   instagram        :
